fix: Font size, quemsomos replaced by principios, paragraph gap increased

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,37 +21,35 @@
     --foreground: #ededed;
   }
 } */
-
 body {
   background: var(--background);
-  font-size: 16px;
+  font-size: 14px;
   font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
-
-@layer base {
-  p {
-    font-size: 1.25rem;
-    text-align: justify;
-    text-justify: inter-word;
+@media screen and (max-width: 640px) {
+  body {
+    font-size: 12px;
   }
+}
+@layer base {
   h1 {
     font-family: 'waters-titling-pro', Georgia, serif;
     color: var(--primary);
-    font-size: 1.7rem;
+    font-size: 1.3rem;
   }
   h2 {
     font-family: 'waters-titling-pro', Georgia, serif;
     color: var(--primary);
-    font-size: 1.5rem;
+    font-size: 1.1rem;
   }
   h3 {
     font-family: 'waters-titling-pro', Georgia, serif;
     color: var(--primary);
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
   small {
     color: var(--quaternary);
-    font-size: 0.8rem;
+    font-size: 0.6rem;
   }
 }
 
